src/objects/Contacto_telefonico__c.object
<CustomObject>
    <description>Representa los contactos que están vinculados a un Siniestro o a una Póliza</description>
    <fields>
        <fullName>CTF_CAS_Contacto_Poliza__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se marca cuando el contacto viene de la póliza</description>
        <label>Contacto Poliza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTF_CAS_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si quiere ser notificado por SMS</description>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_Apellidos__c</fullName>
        <formula>CTF_LKP_Contacto__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellidos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_CIA_Poliza__c</fullName>
        <description>Identificador externo de la Compañía de la Póliza a la que está vinculado el Contacto.</description>
        <formula>CTF_LKP_Poliza_Contrato__r.POL_LKP_Compania__r.CUE_TXT_Identificador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIA Póliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_Email__c</fullName>
        <formula>CTF_LKP_Contacto__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Electrónico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_Nombre__c</fullName>
        <formula>CTF_LKP_Contacto__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_Poliza_Contrato__c</fullName>
        <formula>CTF_LKP_Caso__r.CAS_LKP_PolizaContrato__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Póliza/Contrato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_TelefonoAdicional__c</fullName>
        <formula>CTF_LKP_Contacto__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Adic.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_TelefonoMovil__c</fullName>
        <formula>CTF_LKP_Contacto__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Móvil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_FOR_Telefono__c</fullName>
        <formula>CTF_LKP_Contacto__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTF_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Caso vinculado a un contacto.</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contactos Telefónicos</relationshipLabel>
        <relationshipName>CCA_REL_Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTF_LKP_Contacto_Telefonico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solo estará relleno cuando son contactos de casos mixtos</description>
        <label>Contacto Telefónico</label>
        <referenceTo>Contacto_telefonico__c</referenceTo>
        <relationshipLabel>Contactos Telefónicos</relationshipLabel>
        <relationshipName>CTF_REL_Contacto_Telefonico</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTF_LKP_Contacto__c</fullName>
        <description>Contacto vinculado a un caso.</description>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos Telefónicos</relationshipLabel>
        <relationshipName>CCA_REL_Casos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CTF_LKP_Poliza_Contrato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Póliza/Contrato</description>
        <label>Póliza/Contrato</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contactos Telefónicos</relationshipLabel>
        <relationshipName>CTF_REL_Poliza_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTF_SEL_Hora_desde__c</fullName>
        <description>Hora desde la que está disponible</description>
        <label>Hora desde</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Horas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTF_SEL_Hora_hasta__c</fullName>
        <description>Hora hasta la que está disponible</description>
        <label>Hora hasta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Horas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTF_SEL_Tipo_Relacion__c</fullName>
        <label>Tipo/Relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Relacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTF_TXT_Identificador__c</fullName>
        <description>Campo externo y exclusivo</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CTF_TXT_Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <label>Contacto Telefónico</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CTF_FOR_Nombre__c</columns>
        <columns>CTF_FOR_Apellidos__c</columns>
        <columns>CTF_FOR_Telefono__c</columns>
        <columns>CTF_FOR_TelefonoAdicional__c</columns>
        <columns>CTF_FOR_TelefonoMovil__c</columns>
        <columns>CTF_SEL_Tipo_Relacion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contactos Telefónicos</pluralLabel>
    <recordTypes>
        <fullName>Contacto_telefonico_caso</fullName>
        <active>true</active>
        <description>Contacto telefónico caso</description>
        <label>Contacto telefonico caso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contacto_telefonico_poliza</fullName>
        <active>true</active>
        <description>Contacto telefónico de la póliza</description>
        <label>Contacto telefonico póliza</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(ISCHANGED(CTF_TXT_Identificador__c ), 
  IF(AND(CONTAINS($Label.RT_CTF_CASO,&apos; Contacto_telefonico__c:&apos;+ RecordType.DeveloperName),CTF_TXT_Identificador__c &lt;&gt; CTF_LKP_Contacto__r.CON_TXT_Identificador__c + &apos;_&apos; + CTF_LKP_Caso__r.CaseNumber),
    true,
    IF(AND(CONTAINS($Label.RT_CTF_POLIZA, RecordType.DeveloperName),CTF_TXT_Identificador__c &lt;&gt; CTF_LKP_Contacto__r.CON_TXT_Identificador__c + &apos;_&apos; + CTF_LKP_Poliza_Contrato__r.POL_LKP_Compania__r.CUE_TXT_Identificador__c + &apos;_&apos; + CTF_LKP_Poliza_Contrato__r.Name),
      true,
      false)), 
  false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK( CTF_TXT_Identificador__c ),ISNULL( CTF_TXT_Identificador__c ))</errorConditionFormula>
        <errorDisplayField>CTF_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>